# tri-arb-scanner

./: .env.example  .gitignore  ACCEPTANCE.md  AGENTS.md  DOCS.md  README.md  hatch_build.py  pyproject.toml
.githooks/: commit-msg
.github/workflows/: ci.yml
frontend/: index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.node.json
frontend/src/: App.test.tsx  App.tsx  main.tsx  sound.test.ts  sound.ts  state.test.ts  state.ts  styles.css  types.ts  useScanner.test.ts  useScanner.ts
scripts/: check_commit_messages.py  check_wheel_contents.py  generate_mexc_proto.py
src/tri_arb/: __init__.py  __main__.py  api.py  cli.py  config.py  doctor.py  market_data.py  observability.py  presentation.py  services.py
src/tri_arb/domain/: __init__.py  coverage.py  graph.py  models.py  simulation.py
src/tri_arb/exchange/binance/: __init__.py  depth.py  market_data.py  metadata.py  rest.py  websocket.py
src/tri_arb/exchange/bybit/: __init__.py  depth.py  market_data.py  metadata.py  rest.py  websocket.py
src/tri_arb/exchange/mexc/: __init__.py  depth.py  metadata.py  rest.py  subscriptions.py  websocket.py
src/tri_arb/exchange/okx/: __init__.py  depth.py  (+4 more)
src/tri_arb/scanner/: __init__.py  confirmation.py  diagnostics.py  engine.py  lifecycle.py  runtime.py  screening.py
src/tri_arb/storage/: __init__.py  codec.py  database.py
tests/: __init__.py  test_api.py  test_api_websocket.py  test_binance_depth.py  test_binance_market_data.py  test_binance_metadata.py  test_binance_rest.py  test_binance_websocket.py  test_bybit_depth.py  test_bybit_market_data.py  test_bybit_metadata.py  test_bybit_rest.py  test_bybit_websocket.py  test_cli.py  test_config.py  test_confirmation.py  test_coverage.py  test_graph.py  test_lifecycle.py  test_market_data.py  test_mexc_depth.py  test_mexc_metadata.py  test_mexc_rest.py  test_mexc_rest_fixture.py  test_mexc_websocket.py  test_observability.py  test_okx_depth.py  test_okx_market_data.py  test_okx_metadata.py  test_okx_rest.py  test_opportunity_hub.py  test_presentation.py  test_public_api.py  test_scanner_engine.py  test_scanner_runtime.py  test_screening.py  test_screening_performance.py  test_services.py  test_simulation.py  test_storage.py  (+1 more)
tests/fixtures/: mexc_btcusdt_depth_20.b64  mexc_public_rest_sample.json
(+2 files in other folders)
