[build-system]
requires = ["hatchling>=1.28"]
build-backend = "hatchling.build"

[project]
name = "tri-arb-scanner"
version = "0.1.0"
description = "Local-first, auditable triangular arbitrage scanner for MEXC, OKX, Binance, and Bybit spot markets"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "GPL-3.0-only" }
dependencies = [
  "aiosqlite>=0.22,<1",
  "fastapi>=0.139,<1",
  "httpx>=0.28,<1",
  "protobuf>=7.35,<8",
  "pydantic-settings>=2.14,<3",
  "sqlalchemy[asyncio]>=2.0,<3",
  "uvicorn[standard]>=0.51,<1",
  "websockets>=16,<17",
]

[project.scripts]
tri-arb = "tri_arb.cli:main"

[project.optional-dependencies]
dev = [
  "grpcio-tools>=1.82,<2",
  "pytest>=9.1,<10",
  "pytest-asyncio>=1.3,<2",
  "ruff>=0.15.22,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tri_arb"]

[tool.hatch.build.targets.wheel.force-include]
"frontend/dist" = "tri_arb/frontend_dist"

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["src/tri_arb/exchange/mexc/proto/*_pb2.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
